scaffold/typescript-go-main/testdata/baselines/reference/fourslash/syntaxandSemanticDiagnostics/getJavaScriptSyntacticDiagnostics3.baseline
// === Syntax and Semantic Diagnostics ===
/a.js(1,9): error TS8004: Type parameter declarations can only be used in TypeScript files.


==== /a.js (1 errors) ====
    class C<T> { }
            ~
!!! error TS8004: Type parameter declarations can only be used in TypeScript files.